--- a/css/style.css
+++ b/css/style.css
@@ -682,6 +682,83 @@ body {
 .contact-link-footer:focus {
   color: var(--accent-color);
 }
+/*Footer Form*/
+.footer-form-label-text {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--simple-white);
+  display: block;
+  margin-bottom: 20px;
+  margin-left: 93px;
+}
+
+.footer-form-input {
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: transparent;
+  font-size: 16px;
+  line-height: 1.25;
+  box-sizing: border-box;
+  letter-spacing: 0.03em;
+  color: var(--dark-background-text-color);
+  align-items: center;
+  margin-right: 12px;
+  padding-left: 16px;
+  
+
+}
+.footer-form-input:hover,
+.footer-form-input:focus
+ {
+  border-color: var(--accent-color)
+}
+.footer-form {
+  margin-left: 93px;
+  display: flex;
+  flex-direction: row;
+
+}
+.footer-form-btn {
+  width: 200px;
+  height: 50px;
+  background-color: var(--accent-color);
+  font-weight: 700;
+font-size: 16px;
+line-height: 1.875;
+letter-spacing: 0.06em;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border-color: transparent;
+justify-content: center;
+align-items: center;
+text-align: center;
+display: flex;
+flex-direction: row;
+
+
+color: var(--simple-white);
+}
+.footer-form-btn-icon{
+  fill: var(--simple-white);
+  margin-left: 10px;
+  
+  display: block;
+  
+  
+  
+}
+.footer-form-btn-text {
+  display: block;
+  
+
+
+}
 
 
 /*modal window*/
@@ -714,6 +791,18 @@ body {
   height: 581px;
   background-color: var(--simple-white);
   border-radius: 4px;
+  font-size: 12px;
+line-height: 1.16;
+padding: 40px;
+
+
+letter-spacing: 0.01em;
+
+color: var(--main-text-color);
+
+}
+.modal-form{
+ 
 }
 
 .modal-close-btn {
@@ -729,4 +818,93 @@ body {
   background-image: url("../images/close-black.svg");
   background-size: contain;
 }
+.modal-username, .modal-mail, .modal-tel {
+  position: relative;
+}
 
+.modal-name-icon{
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
+}
+.modal-title{
+  margin-bottom: 12px;
+  
+  font-weight: 700;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  font-size: 20px;
+
+}
+.modal-input{
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 10px;
+  border-radius: 4px;
+  margin-top: 4px;
+}
+.modal-input-comment {
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 10px;
+  border-radius: 4px;
+  padding: 12px 16px;
+  margin-top: 4px;
+
+}
+.modal-input-comment::placeholder {
+  
+  transform: translateY(-48px);
+}
+.modal-btn {
+  display: block;
+  margin: 30px auto;
+  height: 50px;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--simple-white);
+  border-color:transparent ;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  width: 200px;
+}
+.checkbox-input {
+  font-size: 14px;
+line-height: 1.714;
+margin: 20px 12px;
+align-items: center;
+
+letter-spacing: 0.03em;
+display: flex;
+color: var(--main-text-color);
+
+}
+.modal-agreement-link {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+.hidden-modal-checkbox{
+  appearance: none;
+}
+.modal-checkbox {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  background-color: var(--simple-white);
+  border-color: var(--header-text-color);
+  border: solid 2px;
+  border-radius: 2px;
+  margin-right: 7px;
+}
+.hidden-modal-checkbox:checked + .modal-checkbox {
+  background-color: red;
+}
