--- a/css/style.css
+++ b/css/style.css
@@ -728,36 +728,27 @@ body {
   width: 200px;
   height: 50px;
   background-color: var(--accent-color);
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  color: var(--simple-white);
   font-weight: 700;
-font-size: 16px;
-line-height: 1.875;
-letter-spacing: 0.06em;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-border-color: transparent;
-justify-content: center;
-align-items: center;
-text-align: center;
-display: flex;
-flex-direction: row;
-
-
-color: var(--simple-white);
 }
 .footer-form-btn-icon{
   fill: var(--simple-white);
   margin-left: 10px;
-  
   display: block;
-  
-  
-  
 }
 .footer-form-btn-text {
   display: block;
-  
-
-
 }
 
 
@@ -791,14 +782,11 @@ color: var(--simple-white);
   height: 581px;
   background-color: var(--simple-white);
   border-radius: 4px;
+  line-height: 1.16;
+  padding: 40px;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
   font-size: 12px;
-line-height: 1.16;
-padding: 40px;
-
-
-letter-spacing: 0.01em;
-
-color: var(--main-text-color);
 
 }
 
@@ -874,7 +862,20 @@ color: var(--main-text-color);
   letter-spacing: 0.06em;
   width: 200px;
 }
-.checkbox-input {
+
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.checkbox-label {
   font-size: 14px;
 line-height: 1.714;
 margin: 20px 12px;
@@ -883,16 +884,9 @@ align-items: center;
 letter-spacing: 0.03em;
 display: flex;
 color: var(--main-text-color);
+}
 
-}
-.modal-agreement-link {
-  color: var(--accent-color);
-  text-decoration: underline;
-}
-.hidden-modal-checkbox{
-  appearance: none;
-}
-.modal-checkbox {
+.checkbox-label::before {
   content: "";
   display: inline-block;
   width: 16px;
@@ -903,6 +897,18 @@ color: var(--main-text-color);
   border-radius: 2px;
   margin-right: 7px;
 }
-.hidden-modal-checkbox:checked + .modal-checkbox {
-  background-color: red;
+
+.checkbox:checked + .checkbox-label::before {
+  background-image: url("../images/check-mark.svg");
+  fill: var(--simple-white);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: var(--accent-color);
+  
+}
+
+.checkbox-link {
+  color: var(--accent-color);
+  text-decoration: underline;
 }
