--- a/css/style.css
+++ b/css/style.css
@@ -796,13 +796,27 @@ body {
   right: 8px;
   width: 30px;
   height: 30px;
-  border: var(--close-border);
+  display: inline-flex;
+  align-items: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: 5px;
-  background-color: var(--button-shadow);
-  background-image: url("../images/close-black.svg");
-  background-size: contain;
-}
+  background-color: var(--simple-white);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;}
+ 
+
+.modal-close-btn .icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  padding: 0;
+  transform: translate(-50%, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--simple-white);
+  width: 18px;
+  height: 18px;}
 
 .modal-form,
 .modal-form-fields,
@@ -901,6 +915,7 @@ body {
 .field-checkbox:checked + .checkbox-icon {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
+  
   
 }
 
