--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
   --modal-bg:  rgba(0, 0, 0, 0.2);
   --close-border: 1px solid rgba(0, 0, 0, 0.1);
   --button-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  --modal-btn:  #188CE8;
+  
 }
 html {
   box-sizing: border-box;
@@ -820,6 +822,9 @@ body {
   background-color: var(--simple-white);
   width: 18px;
   height: 18px;}
+  .modal-close-btn .icon:hover{
+    fill: var(--accent-color);
+  }
 
 .modal-form,
 .modal-form-fields,
@@ -833,6 +838,7 @@ body {
 }
 .modal-form-title {
     margin-bottom: 12px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 1.15;
     text-align: center;
@@ -890,10 +896,24 @@ body {
   height: 120px;
   font-size: 12px;
   padding: 12px 16px;
+  
+}
+.modal-form-field textarea::placeholder {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+
 }
 
 .checkbox {
   margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
 }
 .field-checkbox {
   appearance: none;
@@ -918,10 +938,28 @@ body {
 .field-checkbox:checked + .checkbox-icon {
   background-color: var(--accent-color);
   border: 2px solid var(--accent-color);
-  
-  
 }
-
+.modal-button {
+  min-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: "Roboto", sans-serif;
+  color: var(--simple-white);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  background-color: var(--modal-btn);
+  letter-spacing: 0.06em;
+  border-color: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
 
